@startuml
'https://plantuml.com/class-diagram

class MapQuery {
    request_map_view()
}
class MapViewParser {
    parse_map_view()
    parse_file()
}
class LemonMap

class Vehicle {
    id
    hash()
}
class Scooter
class NonScooter

note right: if we encounter \n non scooters we put\n the vehicles here

class VehicleStats

Vehicle <|-- Scooter
Vehicle <|-- NonScooter

LemonMap o-- VehicleStats
LemonMap o-- "many" Vehicle
LemonMap o-- MapQuery

@enduml
